--- a/WinterHackathonNotebook.ipynb
+++ b/WinterHackathonNotebook.ipynb
@@ -2,23 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "ac70e3ed-414d-47ff-8ff9-3cfd3e294290",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     ]
+    }
+   ],
    "source": [
     "# Importing necessary library\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "ed0dab9f-30ab-4fa1-a9fc-2cfd528697a9",
    "metadata": {
     "tags": []
@@ -40,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "18f1eddb-3e86-4ecd-9d71-fca0d340484a",
    "metadata": {
     "tags": []
@@ -185,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "96163b76-b536-413b-9236-b2b102eae11d",
    "metadata": {
     "tags": []
@@ -208,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "e62330de-c409-466a-8535-9815357b453d",
    "metadata": {
     "tags": []
@@ -231,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "ccad352a-c9b7-4946-9dcd-908f5dd24a32",
    "metadata": {
     "tags": []
@@ -256,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "a81439f3-b4b5-47cf-93df-bd401b7e260c",
    "metadata": {
     "tags": []
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "cb5ad3f4-4278-4ce5-bf98-27d66b1beae1",
    "metadata": {
     "tags": []
@@ -387,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "b3e66cc6-76af-474c-a236-c80f40a0741d",
    "metadata": {
     "tags": []
@@ -404,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "6bc9c264-da97-427a-91bf-2f42bf5adb02",
    "metadata": {
     "tags": []
@@ -523,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "10dc952c-5087-4a94-b088-24b1fcfe0ebf",
    "metadata": {
     "tags": []
@@ -537,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "1c75a8a5-8332-44c4-af8c-df6da72d814e",
    "metadata": {
     "tags": []
@@ -624,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "0af01c15-8113-4cc0-8f5f-d61f310158b2",
    "metadata": {
     "tags": []
@@ -647,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "4263be7d-0fdd-497b-8bcf-c8db724b8d9a",
    "metadata": {
     "tags": []
@@ -662,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "06c52f92-7131-4481-86ef-d0ef9f942d65",
    "metadata": {
     "tags": []
@@ -728,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "89fa8e10-d26c-4723-be74-0bc9fc7f3768",
    "metadata": {
     "tags": []
@@ -742,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "2d65f660-3de2-4d07-8bd3-71f1368cb8cb",
    "metadata": {
     "tags": []
@@ -829,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "46f5f212-bff3-4396-b137-e3cc066e1998",
    "metadata": {
     "tags": []
@@ -852,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "edb99728-f2cb-47be-8f6b-f4eeb0bb8516",
    "metadata": {
     "tags": []
@@ -866,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "fb705af6-8942-4daf-b56f-092249b492b7",
    "metadata": {
     "tags": []
@@ -932,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "3c1acfa3-8b38-4122-937e-16c07f7de1fa",
    "metadata": {
     "tags": []
@@ -954,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "60481665-96b8-4cdd-9e60-94fa73721c89",
    "metadata": {
     "tags": []
@@ -988,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "446c5d35-6b59-432b-bd68-d4eb5edd7af2",
    "metadata": {
     "tags": []
@@ -1011,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "0333cc00-3434-4e9c-943f-01e655f2bf3e",
    "metadata": {
     "tags": []
@@ -1034,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "9c5a8d41-2021-4f25-b800-2155083ed7d0",
    "metadata": {
     "tags": []
@@ -1047,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "fd09b879-c009-48fe-be57-4a6e28c1715c",
    "metadata": {
     "tags": []
@@ -1070,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "1c1c6991-b8f0-4b2b-9265-43012e24f6ea",
    "metadata": {
     "tags": []
@@ -1082,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "58c1ed0c-154b-4586-9d59-7f13e21cd4c6",
    "metadata": {
     "tags": []
@@ -1110,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "700f68a6-9ef4-474a-b156-e3631fa3f441",
    "metadata": {
     "tags": []
@@ -1122,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "b7701429-5693-4dcd-916a-1dd14928eb04",
    "metadata": {
     "tags": []
@@ -1209,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "7aac8cd8-8ba0-4a42-9a23-09bea77c065e",
    "metadata": {
     "tags": []
@@ -1232,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "d561771a-d01e-4ab2-b888-ca170d11447f",
    "metadata": {
     "tags": []
@@ -1246,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "aed73459-f4a7-4412-92c6-66bfadddc216",
    "metadata": {
     "tags": []
@@ -1384,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "4cddbedb-a653-48e2-a6d0-1bcd3f3ea8b7",
    "metadata": {
     "tags": []
@@ -1407,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "73b0c2bc-4be8-4829-a97e-0b3189f401a5",
    "metadata": {
     "tags": []
@@ -1419,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "25260cf3-cdcb-48f3-83e9-f093c47d2ab9",
    "metadata": {
     "tags": []
@@ -1500,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "c1500106-94fc-415c-a9de-8bb96928ed60",
    "metadata": {
     "tags": []
@@ -1512,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "b36db4e6-8515-470b-baed-d3c2455439b4",
    "metadata": {
     "tags": []
@@ -1593,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "f55c3849-fc28-419f-83d1-fe67e5dc9cc5",
    "metadata": {
     "tags": []
@@ -1605,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "id": "a97ceea2-b611-4f2a-9664-7bc9811c6352",
    "metadata": {
     "tags": []
@@ -1749,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "id": "c64ac9e2-778b-406d-8c50-e75f27528337",
    "metadata": {
     "tags": []
@@ -1772,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "id": "68976076-3304-47f8-b148-f76f1a1799d7",
    "metadata": {
     "tags": []
@@ -1786,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "id": "b6528c24-059e-4b06-97a8-d7fc4fd1b90b",
    "metadata": {
     "tags": []
@@ -1809,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "id": "8ca9c8c2-d396-45aa-a938-cb18ec096cc3",
    "metadata": {
     "tags": []
@@ -1822,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "a26c67b8-a2fa-41ba-926c-7cb8dfcdb2e3",
    "metadata": {
     "tags": []
@@ -1845,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "406a7f76-c50d-48b9-9d21-b7ddddb9839d",
    "metadata": {
     "tags": []
@@ -1858,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "id": "c02a4e24-7637-4d35-8c63-61ae20434df6",
    "metadata": {
     "tags": []
@@ -2315,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "id": "52005ae9-628f-4acb-94ea-00d8ba5513c7",
    "metadata": {
     "tags": []
@@ -2338,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "d7e1e884-d1e7-414f-a6e3-8687674f6357",
    "metadata": {
     "tags": []
@@ -2350,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "361ffc7c-1fdb-4558-bd49-780637d2621c",
    "metadata": {
     "tags": []
@@ -2807,7 +2818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "id": "1d35e1b8-f83c-41ea-92e6-604549075ec4",
    "metadata": {
     "tags": []
@@ -2819,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "id": "de27591f-6938-4424-96b9-34e04880871f",
    "metadata": {
     "tags": []
@@ -2831,7 +2842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "id": "c84d737a-deb1-4c7a-b5b7-9cf059227c97",
    "metadata": {
     "tags": []
@@ -2854,7 +2865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "id": "c526c20f-2729-4cea-aa65-8ff8f1dfce10",
    "metadata": {
     "tags": []
@@ -2868,7 +2879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "id": "14e762ab-4ec1-4464-b542-ccb38410fc74",
    "metadata": {
     "tags": []
@@ -2894,7 +2905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "id": "bc7a9234-de63-4140-b4c7-d7322d4c1733",
    "metadata": {
     "tags": []
@@ -2906,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "id": "bbbbb368-fc87-419f-97ae-e3bb729995ef",
    "metadata": {
     "tags": []
@@ -2930,7 +2941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "id": "5ed9cd40-6db3-488e-a654-ee27fe7528c4",
    "metadata": {
     "tags": []
@@ -2953,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": null,
    "id": "3fdb7b19-c4ed-4eb6-8cf9-2e7770a1c3bc",
    "metadata": {
     "tags": []
@@ -2988,7 +2999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "id": "6642d602-732b-4040-baa0-1419248787f0",
    "metadata": {
     "tags": []
@@ -3014,7 +3025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "id": "71ab5fec-195d-402d-9fd4-d7694c86e916",
    "metadata": {
     "tags": []
@@ -3027,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "654f480c-8609-4bf5-b106-5d0fd11e2ef6",
    "metadata": {
     "tags": []
@@ -3050,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "id": "a633aeef-ffc5-40d2-b080-09cea5ace80a",
    "metadata": {
     "tags": []
@@ -3073,7 +3084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "id": "b1085ef8-f4e5-482a-9ecb-c72c47923881",
    "metadata": {
     "tags": []
@@ -3085,7 +3096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "id": "25589c03-9a42-4a55-b68b-aa246d772e0a",
    "metadata": {
     "tags": []
@@ -3099,7 +3110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "id": "936cf42d-8429-413d-a807-aaed35046814",
    "metadata": {
     "tags": []
@@ -3114,7 +3125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "id": "dbe81612-fd80-452c-a515-f7e843f752a8",
    "metadata": {
     "tags": []
@@ -3141,7 +3152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "id": "979bce28-b9bb-4155-a27b-0d11ea5e4027",
    "metadata": {
     "tags": []
@@ -3157,7 +3168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "id": "12bc1c6d-0968-464c-ad67-3c0bb9497e5b",
    "metadata": {
     "tags": []
@@ -3169,7 +3180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "id": "044b3d7a-c222-454f-96e2-269f6d18d0b6",
    "metadata": {
     "tags": []
@@ -3192,7 +3203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "id": "cb372877-7d65-4bde-b4e3-771723a579ff",
    "metadata": {
     "tags": []
@@ -3222,9 +3233,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "RodrigoEnv",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3236,7 +3247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
