Update Final DataSet

--- a/WinterHackathonNotebook.ipynb
+++ b/WinterHackathonNotebook.ipynb
@@ -3085,12 +3085,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 1,
    "id": "25589c03-9a42-4a55-b68b-aa246d772e0a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'suggestion' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m book_name \u001b[39m=\u001b[39m []\n\u001b[1;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m book_id \u001b[39min\u001b[39;00m suggestion:\n\u001b[0;32m      3\u001b[0m     book_name\u001b[39m.\u001b[39mappend(book_pivot\u001b[39m.\u001b[39mindex[book_id])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'suggestion' is not defined"
+     ]
+    }
+   ],
    "source": [
     "book_name = []\n",
     "for book_id in suggestion:\n",
