--- a/WinterHackathonNotebook.ipynb
+++ b/WinterHackathonNotebook.ipynb
@@ -3245,9 +3245,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RodrigoEnv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3259,7 +3259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
