--- a/WinterHackathonAmazonDataSet.ipynb
+++ b/WinterHackathonAmazonDataSet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "296f634f-08a5-4859-a09b-4e6bb6b16b06",
    "metadata": {
     "tags": []
@@ -13,50 +13,49 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "from scipy.sparse import csr_matrix\n",
     "from sklearn.neighbors import NearestNeighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7bd8518d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Load csv data to tables"
+    "### Load csv data to tables\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0e0525db-e6ba-4ff1-bd54-3eff0c05d04a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['Title', 'description', 'authors', 'image', 'previewLink', 'publisher',\n",
-       "       'publishedDate', 'infoLink', 'categories', 'ratingsCount'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'books_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# books_data = pd.read_csv('books_data.csv')\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m books_data\u001b[39m.\u001b[39mcolumns\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'books_data' is not defined"
+     ]
     }
    ],
    "source": [
-    "books_data = pd.read_csv('books_data.csv')\n",
+    "# books_data = pd.read_csv('books_data.csv')\n",
     "books_data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "97b7ea75",
    "metadata": {},
    "outputs": [
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b6f694c6",
    "metadata": {},
    "outputs": [
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8dd25525-055b-48dd-8dae-22ddc66a1118",
    "metadata": {},
    "outputs": [
@@ -129,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9e90d6b4-0001-49eb-92b7-04dd36da0092",
    "metadata": {},
    "outputs": [
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f2f53972",
    "metadata": {},
    "outputs": [
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a011c798",
    "metadata": {},
    "outputs": [],
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f7e62a96",
    "metadata": {},
    "outputs": [],
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "eaaef530",
    "metadata": {},
    "outputs": [],
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e41ff9e7",
    "metadata": {},
    "outputs": [
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0cbb12ab",
    "metadata": {},
    "outputs": [],
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3d97ee70",
    "metadata": {},
    "outputs": [
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f98f5b36",
    "metadata": {},
    "outputs": [
@@ -460,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f6efa00b",
    "metadata": {},
    "outputs": [
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6ca53ed6",
    "metadata": {},
    "outputs": [],
@@ -492,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6f76b76d",
    "metadata": {},
    "outputs": [
@@ -513,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a2f1061b",
    "metadata": {},
    "outputs": [],
@@ -523,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e7ff5e31",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "7cb8c2a4",
    "metadata": {},
    "outputs": [],
@@ -1184,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "6e84458d",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "19e85e78",
    "metadata": {},
    "outputs": [
@@ -1452,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2be5e039",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "6c0f6718",
    "metadata": {},
    "outputs": [
@@ -1716,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "35ee4129",
    "metadata": {},
    "outputs": [],
@@ -1726,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5c4ba416",
    "metadata": {},
    "outputs": [
@@ -2381,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "875ef985",
    "metadata": {},
    "outputs": [
@@ -2495,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "fe478464",
    "metadata": {},
    "outputs": [],
@@ -2506,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "272cc1c2",
    "metadata": {},
    "outputs": [],
@@ -2517,7 +2516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "942b1e97",
    "metadata": {},
    "outputs": [
@@ -3168,7 +3167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "bc1118b7",
    "metadata": {},
    "outputs": [
@@ -3827,17 +3826,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "51a4832d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_matrix = matrix_ratings_authors.merge(authors_matrix, on='title')\n"
+    "final_matrix = matrix_ratings_authors.merge(authors_matrix, on='title')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "95e5a2c9",
    "metadata": {},
    "outputs": [
@@ -4488,7 +4487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "f7d5b6d6",
    "metadata": {},
    "outputs": [],
@@ -4502,7 +4501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "61b3bff2",
    "metadata": {},
    "outputs": [
@@ -5154,7 +5153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "6f500d2b",
    "metadata": {},
    "outputs": [],
@@ -5165,7 +5164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a9dea25d",
    "metadata": {},
    "outputs": [],
@@ -5189,7 +5188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "ccde56a9",
    "metadata": {},
    "outputs": [
@@ -5676,12 +5675,12 @@
    ],
    "source": [
     "output = recommendation_model_rat_auth('20, 000 Leagues Under the Sea' , 20)\n",
-    "output\n"
+    "#output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "2badcd0b",
    "metadata": {},
    "outputs": [
@@ -5715,7 +5714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "362b108b",
    "metadata": {},
    "outputs": [],
@@ -6961,7 +6960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
