--- a/WinterHackathonAmazonDataSet.ipynb
+++ b/WinterHackathonAmazonDataSet.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5a3b5d36",
+   "metadata": {},
+   "source": [
+    "# Future Recommendation Model with a different DataSet\n",
+    "\n",
+    "##### Made by: WhileTrue\n",
+    "------------------------------------------------------------------------------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "296f634f-08a5-4859-a09b-4e6bb6b16b06",
@@ -18,14 +29,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "id": "7bd8518d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Load csv data to tables\n",
-    "\n"
+    "### Load csv data to tables"
    ]
   },
   {
@@ -6960,7 +6968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
